# fast-api-projects

./: .gitignore  frontend.py  main.py  pyproject.toml
app/: app.py  db.py  images.py  schema.py  users.py
